# S0012E-Engine-main

engine/: CMakeLists.txt
engine/networking/: CMakeLists.txt  console.cc  console.h  dead_reck.cc  dead_reck.h  laser.cc  laser.h  network.cc  network.h  spaceship.cc  spaceship.h
projects/client/: CMakeLists.txt  proto.fbs
projects/client/code/: client_app.cc  client_app.h  main.cc  spacegameapp.cc  spaceship.cc
projects/server/: CMakeLists.txt
projects/server/code/: main.cc  server_app.cc  server_app.h
projects/spacegame/: CMakeLists.txt
projects/spacegame/code/: laser.cc  laser.h  spaceship.cc  spaceship.h
